tests/pos/objects/infer-00.ts
var gobj= {
  a: 5
};

/*@ foo :: () => { number | v > 0 } */
function foo () :number {
  var z = gobj.a;
  return z;
}
